--- a/assignment 2.html
+++ b/assignment 2.html
@@ -58,8 +58,10 @@
     <hr>
 
     <footer>
-        <i class="fa-solid fa-phone">+91000037</i>
-        <i class="fa-brands fa-square-instagram">@ recipeblog12</i>
+        <p><i class="fa-solid fa-phone"></i>+91000000023 </p>  
+        
+        <i class="fa-brands fa-square-instagram"></i>
+        
     </footer><br><br>
     <br>
 
